src/objects/OV_KPI_Dimension_NA_Brand__c.object
<CustomObject>
    <description>One View KPI Dimension - Hierarchical</description>
    <fields>
        <fullName>Code__c</fullName>
        <description>OV Hierarchical Dimension</description>
        <externalId>true</externalId>
        <inlineHelpText>OV Hierarchical Dimension</inlineHelpText>
        <label>Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>One View Hierarchical Dimension</description>
        <label>One View KPI Dimension NA Brand</label>
        <referenceTo>OV_KPI_Dimension_NA_Brand__c</referenceTo>
        <relationshipLabel>One View KPI Dimension NA Brands</relationshipLabel>
        <relationshipName>Child_NA_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Level__c</fullName>
        <label>Parent Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>One View KPI Dimension NA Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Level__c</columns>
        <columns>Parent_Id__c</columns>
        <columns>Parent_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>one View KPI Dimension NA  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One View KPI Dimension NA Brands</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>